--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>二头条管理后台</title>
+  <!--<script src="./static/config/index.js"></script>-->
+  <!--<script src="./static/plugins/ueditor-1.4.3.3/ueditor.config.js"></script>-->
+  <!--<script src="./static/plugins/ueditor-1.4.3.3/ueditor.all.js"></script>-->
+  <!--<script src="./static/plugins/ueditor-1.4.3.3/lang/zh-cn/zh-cn.js"></script>-->
 </head>
 <body>
   <div id="app"></div>
